@startuml
skinparam classAttributeIconSize 0

' Database models 

class DB {
  - path : Path
  - conn : DuckDBPyConnection
  + connect() : DuckDBPyConnection
}

class init_db {
  + init_db(db: DB)
}

DB ..> init_db

' Domain models

class Txn {
  + txn_id : int
  + portfolio_id : str
  + time_stamp : datetime
  + txn_type : str
  + asset_id : str
  + qty : float
  + price : float
  + ccy : str
  + cash_amt : float
  + fee_amt : float
  + batch_id : str
}

class Asset {
  + asset_id : str
  + asset_type : str
  + asset_subtype : str
  + ccy : str
}

class Portfolio {
  + portfolio_id : int
  + portfolio_name : str
  + created_at : datetime
  + updated_at : datetime
  + base_ccy : str
}

class Position {
  + portfolio_id : int
  + asset_id : str
  + qty : float
  + book_cost : float
  + last_updated : datetime
}

' Import Domain classes

class PortfolioImportData {
  + portfolio_id : int
  + portfolio_name : str
  + created : bool
  + batch_id : int
}

class ImportData {
  + batch_id : int
  + batch_type : str
  + inserted_rows : int
  + portfolios_affected : list[PortfolioImportData]
}

ImportData "1" o-- "0..*" PortfolioImportData

' Managers

class DashboardManager {
  - db : DB
  - conn
  + open()
  + open_portfolio_by_id(id:int) : PortfolioManager
  + open_portfolio_by_name(name:str) : PortfolioManager
  + list_portfolios(N:int)
  + list_txns(N:int)
  + list_txns_by_*(N:int)
  + list_positions(N:int)
  + list_positions_by_*(N:int)
}

class PortfolioManager {
  - db : DB
  - conn
  - portfolio_id : int
  - portfolio_name : str
  + load_portfolio() : Portfolio
  + list_txns(N:int)
  + list_txns_by_*(N:int)
  + list_positions(N:int)
  + list_positions_by_*(N:int)
}

DashboardManager --> DB
PortfolioManager --> DB
DashboardManager --> PortfolioManager : creates

' Importers

class tTestTxn {
  + portfolio_id : int
  + portfolio_name : str
  + time_stamp : datetime
  + txn_type : str
  + asset_id : str | None
  + qty : float | None
  + price : float | None
  + ccy : str
  + cash_amt : float | None
  + fee_amt : float | None
}

abstract class TxnImporter {
  - manager : DashboardManager
  - batch_id : int | None
  - import_time : datetime | None
  + run() : ImportData
  - _normalize_txn_stage() : None
  - _validate_txn_stage() : None
  - _handle_validation_fail(query_failure) : None
  {abstract} - _append_batch_table() : tuple[int, datetime]
  {abstract} - _stage_import() : None
  {abstract} - _handle_import() : ImportData
}

class TxnImporterManual {
  + txn : tTestTxn
  + create_portfolio : bool | None
  + batch_type : str = "manual-entry"
  - _append_batch_table() : tuple[int, datetime]
  - _stage_import() : None
  - _handle_import() : ImportData
}

class TxnImporterCSV {
  + csv_path : Path
  + delim : str = ","
  + batch_type : str = "csv-import"
  - _append_batch_table() : tuple[int, datetime]
  - _validate_csv_cols() : None
  - _stage_import() : None
  - _handle_import() : ImportData
}

TxnImporter <|-- TxnImporterManual
TxnImporter <|-- TxnImporterCSV
TxnImporterManual "1..*" *-- "1" tTestTxn

PortfolioView --> TxnImporterManual : initiates
DashboardView --> TxnImporterCSV : initiates
PortfolioView --> tTestTxn : creates test Txn

' Viewers

abstract class View {
  + default_display()
  + prompt_input() : str
  + handle_input(line:str) : View
}

class DashboardView {
  - access : DashboardManager
  - cmds : dict[str, argparse.ArgumentParser]
  + __post_init__() : None
  + default_display() : None
  + prompt_input() : str
  + handle_input(line: str) : View
  - _handle_help(args: list[str]) : None
  {static} + build_dash_parsers() : dict[str, argparse.ArgumentParser]
}

class PortfolioView {
  - portfolio_access : PortfolioManager
  - root_access : DashboardManager
  - cmds : dict[str, argparse.ArgumentParser]
  + __post_init__() : None
  + default_display() : None
  + prompt_input() : str
  + handle_input(line: str) : View
  - _handle_help(args: list[str]) : None
  - _prompt_txn_fields() : tTestTxn | View
  {static} + build_port_parsers() : dict[str, argparse.ArgumentParser]
}

View <|-- DashboardView
View <|-- PortfolioView

DashboardView --> DashboardManager
PortfolioView --> PortfolioManager
PortfolioView --> DashboardManager

@enduml
